--- a/app/templates/app/scraped.html
+++ b/app/templates/app/scraped.html
@@ -10,13 +10,15 @@
       <table id="example" class="table table-striped table-bordered" style="width:100%">          
         <thead>
           <tr>
-            <th>Info</th>
+            <th>Full Name</th>
+            <th>Role</th>
           </tr>
         </thead>
         <tbody>
           {% for member in members %}
           <tr>
             <td>{{ member.full_name }}</td>
+            <td>{{ member.role }}</td>
           </tr>
           {% endfor %}
         </tbody>
