--- a/app/templates/app/scraped.html
+++ b/app/templates/app/scraped.html
@@ -10,14 +10,14 @@
       <table id="example" class="table table-striped table-bordered" style="width:100%">          
         <thead>
           <tr>
-            <th>Full Name</th>
-            <th>Role</th>
-            <th>Company</th>            
+            <th class="no-sort">Full Name</th>
+            <th class="no-sort">Role</th>
+            <th class="no-sort">Company</th>
             <th>Division</th>
             <th>Location</th>
-            <th>Phone number</th>
-            <th>Email</th>
-            <th>Link VCF</th>
+            <th class="no-sort">Phone number</th>
+            <th class="no-sort">Email</th>
+            <th class="no-sort">Link VCF</th>
           </tr>
         </thead>
         <tbody>
@@ -41,7 +41,13 @@
 {% block jsfooter %}    
   <script type="text/javascript" charset="utf-8" async defer>
     $(document).ready(function() {
-      $('#example').DataTable();
+      $('#example').DataTable({
+          "ordering": true,
+          columnDefs: [{
+            orderable: false,
+            targets: "no-sort"
+          }]
+      });
     });
   </script>
 {% endblock %}
